get rid of the bearer token, it didn't provide any additional security after the CORS and was easy to fish for from the binary. We don't need the additional complexity there.
